// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth0APIClient getUserCountry should call getUserCountry 1`] = `
Array [
  "cb",
]
`;

exports[`Auth0APIClient init with overrides forwards options to WebAuth 1`] = `
Object {
  "_sendTelemetry": true,
  "_telemetryInfo": Object {},
  "audience": "foo",
  "clientID": "cid",
  "domain": "me.auth0.com",
  "leeway": 60,
  "overrides": Object {
    "__tenant": "tenant1",
    "__token_issuer": "issuer1",
  },
  "plugins": Array [
    Object {
      "name": "ExamplePlugin",
    },
  ],
  "redirectUri": "//localhost:8080/login/callback",
  "responseMode": "query",
  "responseType": "code",
}
`;

exports[`Auth0APIClient logIn with credentials should call client.login 1`] = `
Object {
  "nonce": undefined,
  "realm": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with credentials should call popup.loginWithCredentials when redirect is false and sso is false 1`] = `
Object {
  "nonce": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with credentials should call popup.loginWithCredentials when redirect is false and sso is true 1`] = `
Object {
  "nonce": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call authorize when redirect===true 1`] = `
Object {
  "nonce": undefined,
  "state": undefined,
}
`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call popup.authorize when redirect===false 1`] = `
Object {
  "nonce": undefined,
  "owp": true,
  "state": undefined,
}
`;

exports[`Auth0APIClient parseHash should pass __enableImpersonation when options._enableImpersonation===true 1`] = `
Array [
  Object {
    "__enableImpersonation": true,
    "hash": "hash",
    "nonce": undefined,
    "state": undefined,
  },
  "cb",
]
`;

exports[`Auth0APIClient parseHash should pass __enableImpersonation:false when options._enableImpersonation is not present 1`] = `
Array [
  Object {
    "__enableImpersonation": false,
    "hash": "hash",
    "nonce": undefined,
    "state": undefined,
  },
  "cb",
]
`;

exports[`Auth0APIClient passwordlessStart should call client.passwordlessStart 1`] = `
Array [
  Object {
    "foo": "bar",
  },
  [Function],
]
`;

exports[`Auth0APIClient passwordlessVerify should call client.passwordlessLogin 1`] = `
Array [
  Object {
    "foo": "bar",
    "popup": true,
  },
  [Function],
]
`;
